--- a/style.css
+++ b/style.css
@@ -32,5 +32,192 @@ main {
     max-width: 800px;
     width: 80%;
     margin: 0 auto;
+    margin-top: 10px;
+    padding: 16px;
+    border:  2px solid black;
+    background-color: whitesmoke;
+    border-radius: 10px
+}
+
+.input_section {
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
+.input_section > h2 {
+    text-align: center;
+    color: #8EB486;
+}
+
+.input_section > form > .input {
+   margin: 8px 0;
+}
+
+.input_section > form > button {
+    background-color: #8EB486;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    display: block;
+    width: 100%;
+    padding: 8px
+    cursor: pointer;
+}
+
+.input_section > form > button:hover {
+    background-color: #668B8B;
+}
+
+.input_section > form > button > span {
+    font-weight: bold;
+}
+
+.input_section > form > .input > input {
+    display: block;
+    width: 100%;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+.input_section > form > .input > label {
+    color:  #8EB486;
+    font-weight: bold;
+}
+
+.input_section > form > .input_inline {
+    margin: 12px;
+    display: flex;
+    align-items: center;
+}
+
+.input_section > form > .input_inline > label {
+    color:  #8EB486;
+    font-weight: bold;
+    margin-right: 10px;
+}
+
+/* Section search */
+.search_section {
+    margin: 16px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 16px;
+    border: 1px solid black;
+    border-radius: 8px;
+}
+
+.search_section > h2 {
+    color: #668B8B;
+}
+
+.search_section > form {
+    padding: 16px;
+    width: 100%;
+    display: grid;
+    grid-template-columns: auto 1fr 0.5fr;
+    grid-gap: 10px;
+}
+
+.search_section > form > label {
+    display: flex;
+    align-items: center;
+}
+
+.search_section > form > input {
+    padding: 5px;
+    border-radius: 8px;
+}
+
+.search_section > form > button {
+    background-color:   #8EB486;
+    color: white;
+    border: 0;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.search_section > form > button:hover {
+    background-color: #668B8B;
+}
+
+
+/* Book_shelf */
+.book_shelf {
+    margin: 16px 0 0 0;
+    border: 1px solid black;
+    padding: 16px;
+    border-radius: 10px
+}
+
+.book_shelf > h2 {
+    color: #668B8B;
+}
+
+.book_shelf > .book_list {
     padding: 16px;
 }
+
+.book_shelf > .book_list  > .book_item {
+    padding: 8px 16px 16px 16px;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin: 10px 0;
+}
+
+.book_shelf > .book_list > .book_item > h3,
+p {
+  margin: 8px 0;
+}
+
+.book_shelf > .book_list > .book_item > .action > button {
+    border: 0;
+    padding: 5px;
+    margin: 0 5px 0 0;
+    border-radius: 5px;
+    cursor: pointer;
+ }
+
+.book_shelf > .book_list > .book_item > .action > .green {
+    background-color: darkgreen;
+    color: white;
+  }
+  .book_shelf > .book_list > .book_item > .action > .green:hover {
+    background-color: #3E8E41;
+    color: white;
+  }
+  
+.book_shelf > .book_list > .book_item > .action > .red {
+    background-color: darkred;
+    color: white;
+  }
+  .book_shelf > .book_list > .book_item > .action > .red:hover {
+    background-color: red;
+    color: white;
+  }
+
+  .book_shelf > .book_list > .book_item > .action > .yellow {
+    background-color: #F26B0F;
+    color: white;
+  }
+
+  .book_shelf > .book_list > .book_item > .action > .yellow:hover {
+    background-color: #FF7F24;
+    color: white;
+  }
+
+  footer {
+    margin-top: 20px;
+    padding : 30px;
+    background-color: #8EB486;
+    text-align: center;
+    color: cornflowerblue;
+    color: white
+  }
+
+
+
+
